# sram_beol_optimizer

./: .gitignore  README.md  dashboard_run.err  lc_full.txt  lc_v.txt  pyproject.toml  run_dashboard.py  smoke_errors.py  smoke_layer_constraints.py  smoke_m5_widths.py  smoke_p0_verification.py  smoke_readme_render.py  tests_layer_constraints_v.txt
docs/mockups/: dashboard-mockup.html
docs/superpowers/plans/: 2026-07-05-layer-constraints-and-multi-fix.md
docs/superpowers/specs/: 2025-06-10-sram-beol-interconnect-optimizer-design.md  2026-07-05-layer-constraints-and-multi-fix-design.md
samples/: beol_m1m5.csv  beol_sample.csv  config_demo.yaml  config_m1m5_fix_m1.yaml  config_small.yaml
samples/smoke_p0_out/: smoke.rpt
sram_beol/: __init__.py  cli.py  config.py  db.py  evaluator.py  exceptions.py  optimizer.py  pattern.py  plot.py  report.py  rpt_generator.py
sram_beol/dashboard/: __init__.py  app.py  callbacks.py  layout.py
tests/: __init__.py  conftest.py  test_cli.py  test_config.py  test_core_units.py  test_db.py  test_evaluator.py  test_integration_full_flow.py  test_layer_constraints.py  test_max_patterns.py  test_pattern.py
tests/fixtures/: valid_config.yaml
